add correct email to index

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -16,7 +16,7 @@
 				<div class="col-md-4 right-side">
 					<address>
 					  <strong>Emilie Stewart</strong><br>
-					  <a class="navbar-link" href="mailto:#">emiliealoha@gmail.com</a>
+					  <a class="navbar-link" href="mailto:#">emiliealoha@hotmail.com</a>
 					</address>
 				</div>
 			</div>
