--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -57,7 +57,7 @@
 
   </div>
   <div class="row">
-    <div class="col-lg-3">
+    <div class="col-sm-3">
       <div class="square-index">
         <h3 class="text-center"><a href="/about">
           <span class="fa-stack fa-lg">
@@ -69,7 +69,7 @@
         <p>Choose between a 1 hour walk or 1.5hr walk depending on your dogs needs. Your dog will be safely picked up and returned happy and ready for a nap.</p>
       </div>
       </div>
-      <div class="col-lg-3 col-sm-12">
+      <div class="col-sm-3 col-sm-12">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
@@ -81,7 +81,7 @@
           <p>Dog boarding in a home environment. Give your dog a fun-filled day of supervised play, hanging out and making friends with other animals. </p>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-12">
+      <div class="col-sm-3">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
@@ -93,7 +93,7 @@
           <p>I visit your pets in their own home. Feeding, changing water bowls and litter trays. This is a 20 minute long visit for your pet. </p>
         </div>
       </div>
-      <div class="col-lg-3 col-sm-12">
+      <div class="col-sm-3">
         <div class="square-index">
           <h3 class="text-center"><a href="/about">
             <span class="fa-stack fa-lg">
